--- a/OracleJETApplication/templates/enterprise/portlets/portlets-large.tmpl.html
+++ b/OracleJETApplication/templates/enterprise/portlets/portlets-large.tmpl.html
@@ -1,6 +1,6 @@
 <div class="tbd">Content TBD
            <span data-bind="ojModule: {
-            name: 'labor',
+            name: 'labor/labor-reuse',
             viewName: 'labor/labor-reuse'}">
     </span>
      -large
