--- a/OracleJETApplication/templates/enterprise.tmpl.html
+++ b/OracleJETApplication/templates/enterprise.tmpl.html
@@ -72,8 +72,8 @@
                 <h2 id="currentPage"><span data-bind="text: label"></span> <span data-bind="css: value"></span></h2>
 
                 <div data-bind="ojModule: {
-                            name: 'enterprise/' + value,
-                            viewName: 'enterprise/' + value +'/' + value + '-large'}">
+                            name: 'enterprise/' + id,
+                            viewName: 'enterprise/' + id +'/' + id + '-large'}">
                 </div>
             </div>
         </div>
