--- a/OracleJETApplication/templates/inventory-management/store/store-small.tmpl.html
+++ b/OracleJETApplication/templates/inventory-management/store/store-small.tmpl.html
@@ -1,7 +1,3 @@
-<div class="tbd">Content TBD
-           <span data-bind="ojModule: {
-            name: 'labor',
-            viewName: 'labor/labor-reuse'}">
-    </span>
+<div class="tbd">Content TBD>
      -small
 </div>
