--- a/OracleJETApplication/templates/header.tmpl.html
+++ b/OracleJETApplication/templates/header.tmpl.html
@@ -49,12 +49,12 @@
 <!-- large template -->
 <script type="text/html" id="lg_xl_header_template">
     <div class="oj-row app-header-desktop">
-        <div class="oj-lg-5 oj-xl-4 oj-col">
+        <div class="oj-lg-4 oj-xl-4 oj-col app-header-logo-wrap">
                 <div role="img" class="oj-icon appheader-logo-oracle" title="Oracle Logo" alt="Oracle Logo"></div>
                 <div class="appheader-appname" data-bind="text: appName"></div>
         </div>
 
-        <div class="oj-lg-4 oj-xl-5 oj-col">
+        <div class="oj-lg-5 oj-xl-5 oj-col">
             <div id="app-header-desktop-nav" class="oj-lg-justify-content-center oj-xl-justify-content-flex-end" data-bind="ojComponent: {component: 'ojNavigationList',
                               drillMode: 'none',
                               edge: 'top',
