--- a/OracleJETApplication/templates/off-canvas-template-left.tmpl.html
+++ b/OracleJETApplication/templates/off-canvas-template-left.tmpl.html
@@ -1,4 +1,4 @@
-<div id="ojAppNav2"
+<div id="offCanvasMenu"
      data-bind="ojComponent: {component: 'ojNavigationList',
         drillMode: 'collapsible',
         data: $data.dataSideSource,
