--- a/OracleJETApplication/templates/enterprise.tmpl.html
+++ b/OracleJETApplication/templates/enterprise.tmpl.html
@@ -31,11 +31,7 @@
             <div class="oj-sm-12 oj-col" data-bind="if: router.stateId()">
                 <div class="oj-panel tab-content" data-bind="with: router.currentState()">
                     <h2 id="currentPage" data-bind="text: label"></h2>
-
-                    <div data-bind="ojModule: {
-                                name: 'enterprise/' + id,
-                                viewName: 'enterprise/' + id +'/' + id + '-small'}">
-                    </div>
+                    <div data-bind="template: {name: 'enterprise/' + id +'/' + id + '-small'}"></div>
                 </div>
             </div>
         </div>
@@ -70,11 +66,7 @@
         <div class="oj-md-12 oj-col" data-bind="if: router.stateId()">
             <div class="oj-panel tab-content" data-bind="with: router.currentState()">
                 <h2 id="currentPage"><span data-bind="text: label"></span> <span data-bind="css: value"></span></h2>
-
-                <div data-bind="ojModule: {
-                            name: 'enterprise/' + id,
-                            viewName: 'enterprise/' + id +'/' + id + '-large'}">
-                </div>
+                    <div data-bind="template: {name: 'enterprise/' + id +'/' + id + '-large'}"></div>
             </div>
         </div>
     </div>
