--- a/OracleJETApplication/templates/labor.tmpl.html
+++ b/OracleJETApplication/templates/labor.tmpl.html
@@ -1,41 +1,42 @@
 <!-- small template -->
 <script type="text/html" id="sm_template">
-<!--
-     <div class="oj-col oj-md-12 oj-lg-12 oj-xl-12 page-header">
-        <h1>
-            <span data-bind="css: pageHeadingIconClass"></span>
-            <span data-bind="text: pageHeading"></span>
-        </h1>
-        <span class="page-sub-navigation">
-            <span data-bind="text: pageSubNavigation"></span>
-        <a href="#">change</a>
-        </span>
-    </div>
--->
-    <div class="oj-row oj-cols-nopad">
-        <div class="oj-sm-12 oj-col app-header-mobile-nav-title" data-bind="if: router.stateId(), click:toggleSections">
-            <div data-bind="with: router.currentState()">
-                <div id="currentPage" data-bind="text: label"></div>
-            </div>
-        </div>
-        <div class="oj-row">
-            <div class="oj-sm-12 oj-col" data-bind="visible: sectionsState">
-                <div id="tabs" data-bind="ojComponent: {component: 'ojNavigationList', selection: router.stateId(), beforeSelect: selectHandler, drillMode: 'none'}">
-                    <ul data-bind="foreach: router.states">
-                        <li data-bind="attr: {id: id}, click: $parent.toggleSections">
-                            <a data-bind="text: label"></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="oj-sm-12 oj-col" data-bind="if: router.stateId()">
-                <div class="oj-panel tab-content" data-bind="with: router.currentState()">
-                    <h2 id="currentPage" data-bind="text: label"></h2>
-                    <div data-bind="template: {name: 'labor/' + id +'/' + id + '-small'}"></div>
-                </div>
+<div class="oj-row oj-cols-nopad">
+    <div class="oj-sm-12 oj-col app-header-mobile-nav-title" data-bind="if: router.stateId(), click:toggleSections">
+        <div data-bind="with: router.currentState()">
+            <div class="mobileNavTitleArea">
+                <span id="currentPage" data-bind="text: label"></span>
             </div>
         </div>
     </div>
+    <div class="oj-row">
+        <div class="oj-sm-12 oj-col" data-bind="visible: sectionsState">
+            <div id="tabs" data-bind="ojComponent: {component: 'ojNavigationList', selection: router.stateId(), beforeSelect: selectHandler, drillMode: 'none'}">
+                <ul data-bind="foreach: router.states">
+                    <li data-bind="attr: {id: id}, click: $parent.toggleSections">
+                        <a data-bind="text: label"></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="oj-col oj-md-12 oj-lg-12 oj-xl-12 page-header">
+            <span class="page-sub-navigation">
+                    <span data-bind="text: pageSubNavigation"></span>
+            <a data-bind="click: handleOpen">change</a>
+<!--                          <button id="buttonOpener" data-bind="ojComponent: {component: 'ojButton', label: 'change'}, click: handleOpen"></button>-->
+            </span>
+        </div>
+        <!-- dialog for change location  -->
+        <div id="dialogWrapper">
+            <div data-bind="template: {name: 'labor/schedules-timecards/changedialog'}"></div>
+        </div>
+        <div class="oj-sm-12 oj-col" data-bind="if: router.stateId()">
+            <div class="oj-panel tab-content" data-bind="with: router.currentState()">
+                <!--                    <h2 id="currentPage" data-bind="text: label"></h2>-->
+                <div data-bind="template: {name: 'labor/' + id +'/' + id + '-small'}"></div>
+            </div>
+        </div>
+    </div>
+</div>
 </script>
 
 <!-- large template -->
@@ -43,14 +44,21 @@
     <div class="oj-col oj-md-12 page-header">
         <h1>
             <span data-bind="css: pageHeadingIconClass"></span>
+            <span data-bind="text: location"></span>
             <span data-bind="text: pageHeading"></span>
         </h1>
         <span class="page-sub-navigation">
             <span data-bind="text: pageSubNavigation"></span>
-        <a href="#">change</a>
+            <a data-bind="click: handleOpen">change</a>
         </span>
     </div>
-
+<!-- dialog for change location  -->
+<div id="dialogWrapper">
+  <div data-bind="template: {name: 'labor/schedules-timecards/changedialog'}"></div>
+</div>
+    
+    
+    
     <div class="oj-row">
         <div class="oj-md-12 oj-col">
             <div data-bind="ojComponent: {component: 'ojConveyorBelt'}">  
