--- a/OracleJETApplication/scss/oj-override.scss
+++ b/OracleJETApplication/scss/oj-override.scss
@@ -1396,6 +1396,7 @@ $navigationListBorderColor:                $lightGray;
         }
         .oj-navigationlist-item-icon {
                 color: $iconColor;
+                margin-right: 0;
             }
     }
     a.oj-navigationlist-item-content {
