udpates to people structure and added module and template to partial in different sections

--- a/OracleJETApplication/templates/labor/employees/employees-large.tmpl.html
+++ b/OracleJETApplication/templates/labor/employees/employees-large.tmpl.html
@@ -1,4 +1,6 @@
+<!--Use ojModule when parent js file is not associated by default to the tmpl file
+Ex. name is linked to people js file and viewName is linked to partial tmpl file-->
 <span data-bind="ojModule: {
-        name: 'partials/employee-search',
+        name: 'people',
         viewName: 'partials/employee-search/employee-search-large'}">
 </span>
