--- a/OracleJETApplication/templates/partials/employee-search/employee-search-large.tmpl.html
+++ b/OracleJETApplication/templates/partials/employee-search/employee-search-large.tmpl.html
@@ -7,6 +7,7 @@
                             <h4>Search Criteria <a href="#">view all employees</a></h4>
                         </div>
                     </div>
+                    <div data-bind="text: pageHeading"></div>
                     <!-- End of Row -->
                     <div class="oj-md-odd-cols-3 oj-md-even-cols-3 oj-lg-odd-cols-3 oj-lg-even-cols-3 searchForm">
                         <div class="oj-row">
