--- a/OracleJETApplication/templates/people.tmpl.html
+++ b/OracleJETApplication/templates/people.tmpl.html
@@ -1,17 +1,18 @@
-
+<!-- small template -->
+<script type="text/html" id="sm_template">
 <div class="justifyCenter">
-    <div class="oj-row">
-        <div class="oj-col oj-sm-12" style="padding-top: 10px;">
-            <div class="oj-row">
-                <div id="pageTitleContainer" class="oj-col oj-sm-2 oj-lg-1">
-                    <h1>People</h1>
-                </div>
-                <span data-bind="ojModule: {
-                name: 'partials/employee-search',
-                viewName: 'partials/employee-search/employee-search-large'}">
-                </span>
-                <ul id="listview"
-                    data-bind="ojComponent: {component: 'ojListView',
+        <div class="oj-row">
+            <div class="oj-col oj-sm-12" style="padding-top: 10px;">
+                <div class="oj-row">
+                    <div id="pageTitleContainer" class="oj-col oj-sm-2 oj-lg-1">
+                        <h1>People</h1>
+                    </div>
+                    <!--Use template when parent js file is associated by default to the tmpl file
+                    Ex. below links to partial tmpl file, people tmpl file already associated with people.js file
+                    -->
+                     <div data-bind="template: {name: 'partials/employee-search/employee-search-large'}"></div>
+
+                    <ul id="listview" data-bind="ojComponent: {component: 'ojListView',
                         data: listViewDataSource,
                         item: {template: 'peoplelist_template'},
                         selectionMode: 'single',
@@ -20,25 +21,72 @@
                         rootAttributes: {style: 'width:100%;height:600px;overflow:auto; margin-top: 5px'},
                         scrollPolicy: 'loadMoreOnScroll',
                         scrollPolicyOptions: {fetchSize: 10}}">
-                </ul>
+                    </ul>
 
-                <script type="text/html" id="peoplelist_template">
-                    <li data-bind="attr: {id: $data['name']}, click: $parent.loadPersonPage">
-                        <div class="oj-row">
-                            <div class="oj-lg-2 oj-md-2 oj-sm-12 oj-col" style="max-width:70px;padding-bottom:5px">
-                                <img data-bind="attr: {src: 'images/listView/'+ name +'.png', alt: name}"/>
-                            </div>
-                            <div class="oj-lg-10 oj-md-10 oj-sm-12 oj-col">
-                                <div class="oj-row row">
-                                    <div class="oj-lg-12 oj-col">
-                                        <span class="header" data-bind="text: firstName + ' ' + lastName"></span>
+                    <script type="text/html" id="peoplelist_template">
+                        <li data-bind="attr: {id: $data['name']}, click: $parent.loadPersonPage">
+                            <div class="oj-row">
+                                <div class="oj-lg-2 oj-md-2 oj-sm-12 oj-col" style="max-width:70px;padding-bottom:5px">
+                                    <img data-bind="attr: {src: 'images/listView/'+ name +'.png', alt: name}" />
+                                </div>
+                                <div class="oj-lg-10 oj-md-10 oj-sm-12 oj-col">
+                                    <div class="oj-row row">
+                                        <div class="oj-lg-12 oj-col">
+                                            <span class="header" data-bind="text: firstName + ' ' + lastName"></span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </li>
-                </script>
+                        </li>
+                    </script>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</script>
+
+<!-- large template -->
+<script type="text/html" id="md_lg_xl_template">
+    <div class="justifyCenter">
+        <div class="oj-row">
+            <div class="oj-col oj-sm-12" style="padding-top: 10px;">
+                <div class="oj-row">
+                    <div id="pageTitleContainer" class="oj-col oj-sm-2 oj-lg-1">
+                        <h1>People</h1>
+                    </div>
+                    <!--Use template when parent js file is associated by default to the tmpl file -->
+                     <div data-bind="template: {name: 'partials/employee-search/employee-search-large'}"></div>
+                    <ul id="listview" data-bind="ojComponent: {component: 'ojListView',
+                        data: listViewDataSource,
+                        item: {template: 'peoplelist_template'},
+                        selectionMode: 'single',
+                        currentItem: '100',
+                        selection: ['100'],
+                        rootAttributes: {style: 'width:100%;height:600px;overflow:auto; margin-top: 5px'},
+                        scrollPolicy: 'loadMoreOnScroll',
+                        scrollPolicyOptions: {fetchSize: 10}}">
+                    </ul>
+
+                    <script type="text/html" id="peoplelist_template">
+                        <li data-bind="attr: {id: $data['name']}, click: $parent.loadPersonPage">
+                            <div class="oj-row">
+                                <div class="oj-lg-2 oj-md-2 oj-sm-12 oj-col" style="max-width:70px;padding-bottom:5px">
+                                    <img data-bind="attr: {src: 'images/listView/'+ name +'.png', alt: name}" />
+                                </div>
+                                <div class="oj-lg-10 oj-md-10 oj-sm-12 oj-col">
+                                    <div class="oj-row row">
+                                        <div class="oj-lg-12 oj-col">
+                                            <span class="header" data-bind="text: firstName + ' ' + lastName"></span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </script>
+                </div>
+            </div>
+        </div>
+    </div>
+</script>
+
+<div data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
