--- a/OracleJETApplication/templates/labor/employees/employees-small.tmpl.html
+++ b/OracleJETApplication/templates/labor/employees/employees-small.tmpl.html
@@ -1,4 +1,4 @@
 <span data-bind="ojModule: {
-        name: 'partials/employee-search',
+        name: 'people',
         viewName: 'partials/employee-search/employee-search-small'}">
 </span>
