--- a/OracleJETApplication/templates/partials/employee-search/employee-search-large.tmpl.html
+++ b/OracleJETApplication/templates/partials/employee-search/employee-search-large.tmpl.html
@@ -1,4 +1,5 @@
-    <div class="oj-row oj-cols-nopad">
+<!--Linked to people.js through modules and template bindings-->
+       <div class="oj-row oj-cols-nopad">
         <div class="oj-col oj-sm-12 oj-md-12 oj-lg-12 oj-xl-12">
             <div id="form-container" class="oj-form">
                 <div class="oj-col oj-lg-8 oj-xl-8">
@@ -7,7 +8,6 @@
                             <h4>Search Criteria <a href="#">view all employees</a></h4>
                         </div>
                     </div>
-                    <div data-bind="text: pageHeading"></div>
                     <!-- End of Row -->
                     <div class="oj-md-odd-cols-3 oj-md-even-cols-3 oj-lg-odd-cols-3 oj-lg-even-cols-3 searchForm">
                         <div class="oj-row">
@@ -107,15 +107,46 @@
                     <div class="resultWrapper"></div>
                 </div>
                 <div class="submitWrapper left">
-                    <input id="submit" type="submit" data-bind="click: buttonClick,
+                   <!--temporary toggleSection function applied to these buttons, will need to submit form and return results and then clear results-->
+                    <input id="submit" type="submit" data-bind="click: toggleSections,
                                                      ojComponent: {component: 'ojButton', label: 'Search', icons: { start: 'fa fa-search'} }" />
 
-                    <input id="reset" type="reset" data-bind="click: buttonClick,
+                    <input id="reset" type="reset" data-bind="click: toggleSections,
                                                   ojComponent: {component: 'ojButton', label: 'Clear'}" />
                 </div>
             </div>
             <!-- End of Form -->
+           <div class="resultWrapper" data-bind="visible: sectionsState">
 
+                <ul id="listview" data-bind="ojComponent: {component: 'ojListView',
+                    data: listViewDataSource,
+                    item: {template: 'peoplelist_template'},
+                    selectionMode: 'single',
+                    currentItem: '100',
+                    selection: ['100'],
+                    rootAttributes: {style: 'width:100%;height:600px;overflow:auto; margin-top: 5px'},
+                    scrollPolicy: 'loadMoreOnScroll',
+                    scrollPolicyOptions: {fetchSize: 10}}">
+                </ul>
+
+                <script type="text/html" id="peoplelist_template">
+                    <li data-bind="attr: {id: $data['name']}, click: $parent.loadPersonPage">
+                        <div class="oj-row">
+                            <div class="oj-lg-2 oj-md-2 oj-sm-12 oj-col" style="max-width:70px;padding-bottom:5px">
+                                <img data-bind="attr: {src: 'images/listView/'+ name +'.png', alt: name}" />
+                            </div>
+                            <div class="oj-lg-10 oj-md-10 oj-sm-12 oj-col">
+                                <div class="oj-row row">
+                                    <div class="oj-lg-12 oj-col">
+                                        <span class="header" data-bind="text: firstName + ' ' + lastName"></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </script>
+
+            </div>
         </div>
     </div>
     <!-- End of Column -->
