--- a/OracleJETApplication/templates/profile.tmpl.html
+++ b/OracleJETApplication/templates/profile.tmpl.html
@@ -1,3 +1,5 @@
+<!-- small template -->
+<script type="text/html" id="sm_template">
 <div class="justifyCenter">
     <div id="personaldetails" class="oj-row" style="margin-bottom:26px;">
         <div class="oj-col oj-md-2 oj-lg-2 demo-employee-photo-person-detail">
@@ -38,7 +40,58 @@
     <div class="oj-md-12 oj-col" data-bind="if: tabRouter.stateId()">
         <div class="oj-panel tab-content" data-bind="with: tabRouter.currentState()">
             <h2 id="currentPage" data-bind="text: label"></h2>
-                <div data-bind="template: {name: 'profile/' + id +'/' + id + '-large'}"></div>
+            <div data-bind="template: {name: 'profile/' + id +'/' + id + '-small'}"></div>
         </div>
     </div>
 </div>
+</script>
+
+<!-- large template -->
+<script type="text/html" id="md_lg_xl_template">
+<div class="justifyCenter">
+    <div id="personaldetails" class="oj-row" style="margin-bottom:26px;">
+        <div class="oj-col oj-md-2 oj-lg-2 demo-employee-photo-person-detail">
+            <img data-bind="attr: {src: getPhoto(personProfile().empId)}" />
+        </div>
+        <div class="oj-col oj-md-4 oj-lg-4" style="margin-top: 10px;">
+            <div data-bind="text: personProfile().firstName + ' ' + personProfile().lastName"></div>
+            <div data-bind="text: personProfile().title"></div>
+            <div data-bind="text: personProfile().deptName"></div>
+        </div>
+        <div class="oj-col oj-md-4 oj-lg-4" style="margin-top: 10px;">
+            <div>
+                <div data-bind="text: personProfile().phone"></div>
+            </div>
+            <div>
+                <div data-bind="text: personProfile().mobile"></div>
+            </div>
+            <div>
+                <div>
+                    <a data-bind="attr:{href: getEmail($data)}, text: personProfile().email+'@example.net'"></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="oj-row">
+    <div class="oj-md-12 oj-col">
+        <div data-bind="ojComponent: {component: 'ojConveyorBelt'}">
+            <div id="profileTabs" data-bind="ojComponent: {component: 'ojNavigationList', selection: tabRouter.stateId(), beforeSelect: selectTabHandler, drillMode: 'none', edge: 'top'}">
+                <ul data-bind="foreach: tabRouter.states">
+                    <li data-bind="attr: {id: id}">
+                        <a data-bind="text: label"></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="oj-md-12 oj-col" data-bind="if: tabRouter.stateId()">
+        <div class="oj-panel tab-content" data-bind="with: tabRouter.currentState()">
+            <h2 id="currentPage" data-bind="text: label"></h2>
+            <div data-bind="template: {name: 'profile/' + id +'/' + id + '-large'}"></div>
+        </div>
+    </div>
+</div>
+</script>
+
+<div data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
