--- a/OracleJETApplication/templates/profile/profile/profile-large.tmpl.html
+++ b/OracleJETApplication/templates/profile/profile/profile-large.tmpl.html
@@ -1,25 +1,45 @@
-<div class="justifyCenter">
-    <div id="personaldetails" class="oj-row" style="margin-bottom:26px;">
-        <div class="oj-col oj-md-2 oj-lg-2 demo-employee-photo-person-detail">
-            <img data-bind="attr: {src: $parent.getPhoto($parent.personProfile().empId)}" />
-        </div>
-        <div class="oj-col oj-md-4 oj-lg-4" style="margin-top: 10px;">
-            <div data-bind="text: $parent.personProfile().firstName + ' ' + $parent.personProfile().lastName"></div>
-            <div data-bind="text: $parent.personProfile().title"></div>
-            <div data-bind="text: $parent.personProfile().deptName"></div>
-        </div>
-        <div class="oj-col oj-md-4 oj-lg-4" style="margin-top: 10px;">
-            <div>
-                <div data-bind="text: $parent.personProfile().phone"></div>
-            </div>
-            <div>
-                <div data-bind="text: $parent.personProfile().mobile"></div>
-            </div>
-            <div>
-                <div>
-                    <a data-bind="attr:{href: $parent.getEmail($data)}, text: $parent.personProfile().email+'@example.net'"></a>
+<div class="oj-row">
+    <div class="general-section">
+        <div class="oj-col oj-lg-6">
+            <h3>General</h3>
+            <div class="oj-row">
+                <div class="oj-col oj-lg-6">
+                    <h4>Name</h4>
+                    <div data-bind="text: $parent.personProfile().firstName + ' ' + $parent.personProfile().lastName"></div>
+                    <h4>POS Check Name</h4>
+                    <h4>Language</h4>
+                    <h4>Time Zone</h4>
+                    <h4>Ethnicity</h4>
+                    <h4>Gender</h4>
+                </div>
+                <div class="oj-col oj-lg-6">
+                    <h4>Profile Picture</h4>
+                    <h4>Veteran</h4>
+                    <h4>Registered Disable Number</h4>
+                    <h4>Discharge Date</h4>
                 </div>
             </div>
         </div>
     </div>
+    <div class="contact-section">
+        <div class="oj-col oj-lg-6">
+            <h3>Contact</h3>
+            <div class="oj-row">
+                <div class="oj-col oj-lg-6">
+                    <h4>Email Address</h4>
+                    <a data-bind="attr:{href: $parent.getEmail($data)}, text: $parent.personProfile().email+'@example.net'"></a>
+                    <h4>Phone Number</h4>
+                    <div data-bind="text: $parent.personProfile().phone"></div>
+                    <h4>Other Phone Number</h4>
+                    <div data-bind="text: $parent.personProfile().mobile"></div>
+                    <h4>FAX Number</h4>
+                    <h4>Address</h4>
+                </div>
+                <div class="oj-col oj-lg-6">
+                    <h4>Emergency Contact</h4>
+                </div>
+            </div>
+        </div>
+    </div>
+    <h3 class="oj-col oj-lg-12">Custom</h3>
 </div>
